--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,47 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.hannes.beergame.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true">
+
+        <Button
+            android:text="Play"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="139dp"
+            android:id="@+id/button"
+            android:elevation="0dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            tools:textColor="@android:color/white"
+            tools:background="@android:color/holo_blue_dark" />
+
+        <Button
+            android:text="Instructions"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/button"
+            android:layout_alignEnd="@+id/button"
+            android:layout_marginTop="27dp"
+            android:layout_gravity="center"
+            tools:textColor="@android:color/white"
+            tools:background="@android:color/holo_blue_dark"
+            android:id="@+id/button2" />
+
+        <Button
+            android:text="Customize"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/button2"
+            android:layout_alignStart="@+id/button"
+            android:layout_marginTop="37dp"
+            android:layout_gravity="center"
+            tools:textColor="@android:color/white"
+            tools:background="@android:color/holo_blue_dark"
+            android:id="@+id/button3" />
+    </LinearLayout>
 </RelativeLayout>
