--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,22 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:weightSum="1">
+
+        <TextView
+            android:text="The BeerGame!"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2"
+            android:gravity="center"
+            android:textColorLink="?attr/colorPrimaryDark"
+            android:textColor="@android:color/holo_blue_dark"
+            android:textSize="50"
+            android:textStyle="normal|bold"
+            tools:textStyle="normal|bold|italic"
+            android:layout_weight="0.21"
+            android:layout_gravity="center" />
 
         <Button
             android:text="Play"
