--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_alignParentStart="true">
 
         <Button
-            android:text="Play"
+            android:text="@string/play"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="139dp"
@@ -27,10 +27,11 @@
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
             tools:textColor="@android:color/white"
-            tools:background="@android:color/holo_blue_dark" />
+            tools:background="@android:color/holo_blue_dark"
+            android:onClick=""/>
 
         <Button
-            android:text="Instructions"
+            android:text="@string/instructions"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/button"
@@ -39,10 +40,11 @@
             android:layout_gravity="center"
             tools:textColor="@android:color/white"
             tools:background="@android:color/holo_blue_dark"
-            android:id="@+id/button2" />
+            android:id="@+id/button2"
+            android:onClick=""/>
 
         <Button
-            android:text="Customize"
+            android:text="@string/customize"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/button2"
@@ -51,6 +53,7 @@
             android:layout_gravity="center"
             tools:textColor="@android:color/white"
             tools:background="@android:color/holo_blue_dark"
-            android:id="@+id/button3" />
+            android:id="@+id/button3"
+            android:onClick=""/>
     </LinearLayout>
 </RelativeLayout>
