--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
             android:gravity="center"
             android:textColorLink="?attr/colorPrimaryDark"
             android:textColor="@android:color/holo_blue_dark"
-            android:textSize="50"
+            android:textSize="50sp"
             android:textStyle="normal|bold"
             tools:textStyle="normal|bold|italic"
             android:layout_weight="0.21"
