--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,9 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:text="The BeerGame!"
@@ -29,6 +30,7 @@
             android:textStyle="normal|bold"
             tools:textStyle="normal|bold|italic"
             android:layout_weight="0.21"
+            android:background="@drawable/main_button"
             android:layout_gravity="center" />
 
         <Button
@@ -40,9 +42,10 @@
             android:elevation="0dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:background="@drawable/main_button"
             android:layout_gravity="center"
             tools:textColor="@android:color/white"
-            tools:background="@android:color/holo_blue_dark"
+
             android:onClick=""/>
 
         <Button
@@ -54,7 +57,8 @@
             android:layout_marginTop="27dp"
             android:layout_gravity="center"
             tools:textColor="@android:color/white"
-            tools:background="@android:color/holo_blue_dark"
+            android:background="@drawable/main_button"
+
             android:id="@+id/button2"
             android:onClick=""/>
 
@@ -67,7 +71,8 @@
             android:layout_marginTop="37dp"
             android:layout_gravity="center"
             tools:textColor="@android:color/white"
-            tools:background="@android:color/holo_blue_dark"
+            android:background="@drawable/main_button"
+            
             android:id="@+id/button3"
             android:onClick=""/>
     </LinearLayout>
