--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,16 +16,16 @@
         android:layout_height="match_parent"
         android:weightSum="1"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentEnd="true">
 
         <TextView
-            android:text="The BeerGame!"
+            android:text="BeerGame!"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView2"
             android:gravity="center"
             android:textColorLink="?attr/colorPrimaryDark"
-            android:textColor="@android:color/holo_blue_dark"
+            android:textColor="@android:color/Black"
             android:textSize="50sp"
             android:textStyle="normal|bold"
             tools:textStyle="normal|bold|italic"
@@ -35,7 +35,7 @@
 
         <Button
             android:text="@string/play"
-            android:layout_width="250dp"
+            android:layout_width="159dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="139dp"
             android:id="@+id/button"
@@ -47,12 +47,13 @@
             tools:textColor="@android:color/white"
 
 
-            android:onClick=""/>
+            android:onClick=""
+            />
 
 
         <Button
             android:text="@string/instructions"
-            android:layout_width="250dp"
+            android:layout_width="159dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/button"
             android:layout_alignEnd="@+id/button"
@@ -66,7 +67,7 @@
 
         <Button
             android:text="@string/customize"
-            android:layout_width="250dp"
+            android:layout_width="159dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/button2"
             android:layout_alignStart="@+id/button"
