--- a/app/src/main/res/drawable/main_button.xml
+++ b/app/src/main/res/drawable/main_button.xml
@@ -7,7 +7,7 @@
                 <shape>
 
                     <gradient android:angle="270"
-                        android:endColor="#fafa06" android:startColor="#ffc002" />
+                        android:endColor="#ff9948" android:startColor="#f7882f" />
                     <stroke android:width="1dp" android:color="#f5f7f9" />
                     <corners android:radius="15dp" />
                     <padding android:bottom="10dp" android:left="10dp"
