--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#6b7a8f"
     tools:context="com.example.hannes.beergame.MainActivity">
 
     <LinearLayout
@@ -25,12 +26,12 @@
             android:id="@+id/textView2"
             android:gravity="center"
             android:textColorLink="?attr/colorPrimaryDark"
-            android:textColor="@android:color/Black"
+            android:textColor="#f7882f"
             android:textSize="50sp"
             android:textStyle="normal|bold"
             tools:textStyle="normal|bold|italic"
             android:layout_weight="0.21"
-            android:background="@drawable/main_button"
+
             android:layout_gravity="center" />
 
         <Button
