--- a/app/src/main/res/drawable/main_button.xml
+++ b/app/src/main/res/drawable/main_button.xml
@@ -3,15 +3,13 @@
     <item>
         <layer-list>
             <corners android:radius="15dp"></corners>
-           <item android:bottom="2dp" android:left="2dp">
+            <item android:bottom="2dp" android:left="2dp">
                 <shape>
-
-                    <gradient android:angle="270"
-                        android:endColor="#ff9948" android:startColor="#f7882f" />
-                    <stroke android:width="1dp" android:color="#f5f7f9" />
-                    <corners android:radius="15dp" />
-                    <padding android:bottom="10dp" android:left="10dp"
-                        android:right="10dp" android:top="10dp" />
+                <gradient android:angle="270"
+                    android:endColor="#ff9948"
+                    android:startColor="#f7882f" />
+                <stroke android:width="1dp"
+                    android:color="#f5f7f9" /><corners android:radius="15dp" /><padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
                 </shape>
             </item>
         </layer-list>
