--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -9,6 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#6b7a8f"
     tools:context="com.example.hannes.beergame.playActivity">
 
     <LinearLayout
@@ -30,20 +31,21 @@
             />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             app:srcCompat="@drawable/king_of_clubs2"
             android:id="@+id/imageView2"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:layout_marginRight="-15dp"/>
     </LinearLayout>
 
     <Button
         android:text="@string/newCard"
-        android:layout_width="170dp"
+        android:layout_width="150dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        tools:textColor="@android:color/white"
-        android:background="@drawable/main_button"
+        tools:textColor="@android:color/black"
+        android:background="@drawable/main_play_button"
 
         android:id="@+id/button4"
         android:layout_below="@+id/linearLayout"
@@ -53,12 +55,13 @@
     <TextView
         android:text="TextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="5dp"
         android:id="@+id/textView"
-        android:layout_alignEnd="@+id/button4"
-        android:layout_centerHorizontal="false" />
+        android:background="@drawable/main_instrruta"
+
+        android:layout_centerHorizontal="true" />
 
     <LinearLayout
         android:orientation="vertical"
