--- a/app/src/main/res/drawable/main_button.xml
+++ b/app/src/main/res/drawable/main_button.xml
@@ -7,10 +7,10 @@
             <item android:bottom="2dp" android:left="2dp">
                 <shape>
                 <gradient android:angle="270"
-                    android:endColor="#ff9948"
-                    android:startColor="#f7882f" />
+                    android:endColor="#0c9c27"
+                    android:startColor="#24ae32" />
                 <stroke android:width="1dp"
-                    android:color="#f5f7f9" /><corners android:radius="15dp" /><padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
+                    android:color="#62b26b" /><corners android:radius="15dp" /><padding android:bottom="10dp" android:left="10dp" android:right="10dp" android:top="10dp" />
                 </shape>
             </item>
         </layer-list>
