--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#6b7a8f"
+    android:background="@drawable/bakgrunddd"
 
     tools:context="com.example.hannes.beergame.MainActivity">
 
@@ -25,8 +25,8 @@
 
         <Button
             android:text="@string/play"
-            android:layout_width="159dp"
-            android:layout_height="wrap_content"
+            android:layout_width="190dp"
+            android:layout_height="70dp"
 
             android:id="@+id/button"
             android:elevation="0dp"
@@ -43,11 +43,11 @@
 
         <Button
             android:text="@string/instructions"
-            android:layout_width="159dp"
-            android:layout_height="wrap_content"
+            android:layout_width="190dp"
+            android:layout_height="70dp"
             android:layout_below="@+id/button"
             android:layout_alignEnd="@+id/button"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:layout_gravity="center"
             tools:textColor="@android:color/white"
             android:background="@drawable/main_button"
@@ -57,11 +57,11 @@
 
         <Button
             android:text="@string/customize"
-            android:layout_width="159dp"
-            android:layout_height="wrap_content"
+            android:layout_width="190dp"
+            android:layout_height="70dp"
             android:layout_below="@+id/button2"
             android:layout_alignStart="@+id/button"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:layout_gravity="center"
             tools:textColor="@android:color/white"
             android:background="@drawable/main_button"
@@ -77,15 +77,14 @@
         android:id="@+id/textView2"
         android:gravity="center"
         android:textColorLink="?attr/colorPrimaryDark"
-        android:textColor="#fefefe"
+        android:textColor="#0e0e0d"
         android:textSize="50sp"
         android:textStyle="normal|bold"
         tools:textStyle="normal|bold|italic"
         android:layout_weight="0.21"
 
         android:layout_gravity="center"
-        android:layout_marginTop="51dp"
+        android:layout_marginTop="15dp"
         android:layout_alignParentTop="true"
-        android:background="@drawable/main_button"
         android:layout_alignParentStart="true" />
 </RelativeLayout>
