--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,32 @@
 
     tools:context="com.example.hannes.beergame.MainActivity">
 
+    <TextView
+        android:text="@string/app_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:gravity="center"
+        android:textColorLink="?attr/colorPrimaryDark"
+        android:textColor="#fafcf7"
+        android:textSize="50sp"
+        android:textStyle="normal|bold"
+        tools:textStyle="normal|bold|italic"
+        android:layout_weight="0.21"
+
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:weightSum="1"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="49dp">
 
 
 
@@ -47,7 +66,7 @@
             android:layout_height="70dp"
             android:layout_below="@+id/button"
             android:layout_alignEnd="@+id/button"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_gravity="center"
             tools:textColor="@android:color/white"
             android:background="@drawable/main_button"
@@ -61,7 +80,7 @@
             android:layout_height="70dp"
             android:layout_below="@+id/button2"
             android:layout_alignStart="@+id/button"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_gravity="center"
             tools:textColor="@android:color/white"
             android:background="@drawable/main_button"
@@ -69,22 +88,4 @@
             android:id="@+id/button3"
             />
     </LinearLayout>
-
-    <TextView
-        android:text="@string/app_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView2"
-        android:gravity="center"
-        android:textColorLink="?attr/colorPrimaryDark"
-        android:textColor="#0e0e0d"
-        android:textSize="50sp"
-        android:textStyle="normal|bold"
-        tools:textStyle="normal|bold|italic"
-        android:layout_weight="0.21"
-
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
 </RelativeLayout>
