--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -59,6 +59,8 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="5dp"
         android:id="@+id/textView"
+        android:layout_below="@+id/button4"
+        android:layout_marginTop="20dp"
         android:background="@drawable/main_instrruta"
 
         android:layout_centerHorizontal="true" />
