--- a/app/src/main/res/layout/activity_instructions.xml
+++ b/app/src/main/res/layout/activity_instructions.xml
@@ -12,36 +12,44 @@
     tools:context="com.example.hannes.beergame.instructionsActivity">
 
 
-    <TextView
-        android:textColor="#0a0a0a"
-        android:text="@string/instruktionerna"
+    <!--  <TextView
+         android:textColor="#0a0a0a"
+         android:text="@string/instruktionerna"
 
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/main_instrruta"
-        android:id="@+id/textView"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="67dp" />
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:background="@drawable/main_instrruta"
+         android:id="@+id/textView"
+         android:layout_alignParentBottom="true"
+         android:layout_alignParentStart="true"
+         android:layout_marginBottom="67dp" />
 
-    <TextView
-        android:text="@string/instructions"
+     <TextView
+         android:text="@string/instructions"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:gravity="center"
+         android:textColor="#fefefe"
+         android:textStyle="normal|bold"
+         tools:textStyle="normal|bold|italic"
+
+         android:layout_weight="0.21"
+         android:layout_gravity="center"
+         android:layout_marginTop="51dp"
+         android:textSize="50sp"
+         android:layout_alignParentTop="true"
+         android:layout_centerHorizontal="true"
+
+         android:id="@+id/textView3" />
+ -->
+    <ListView
+        android:id="@+id/carddeck_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textColor="#fefefe"
-        android:textStyle="normal|bold"
-        tools:textStyle="normal|bold|italic"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
-        android:layout_weight="0.21"
-        android:layout_gravity="center"
-        android:layout_marginTop="51dp"
-        android:textSize="50sp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-
-        android:id="@+id/textView3" />
 </RelativeLayout>
 
 
