--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -33,7 +33,7 @@
         <ImageView
             android:layout_width="200dp"
             android:layout_height="200dp"
-            app:srcCompat="@drawable/king_of_clubs2"
+            app:srcCompat="@drawable/kortrygg_tbg"
             android:id="@+id/card"
             android:clickable="true"
             android:onClick="imageClick"
@@ -47,8 +47,9 @@
         android:layout_height="100dp"
         android:layout_gravity="center"
         tools:textColor="@android:color/black"
-        android:background="@drawable/main_play_button"
+        android:background="@drawable/kortrygg_tbg"
         android:textSize="19sp"
+        android:onClick="imageClick"
         android:id="@+id/button4"
         android:layout_below="@+id/linearLayout"
         android:layout_centerHorizontal="true"
