--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -20,15 +20,7 @@
         android:layout_alignParentStart="true"
         android:id="@+id/linearLayout">
 
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            app:srcCompat="@drawable/kortrygg_tbg"
-            android:id="@+id/imgView"
-            android:layout_alignParentTop="true"
-            android:layout_alignEnd="@+id/button4"
-            android:layout_marginLeft="-15dp"
-            />
+
 
         <ImageView
             android:layout_width="200dp"
@@ -38,7 +30,8 @@
             android:clickable="true"
 
             android:layout_weight="1"
-            android:layout_marginRight="-15dp"/>
+            android:layout_marginRight="-15dp"
+            android:layout_marginLeft="-15dp"/>
     </LinearLayout>
 
     <Button
