--- a/app/src/main/res/layout/activity_choosedeck.xml
+++ b/app/src/main/res/layout/activity_choosedeck.xml
@@ -21,18 +21,7 @@
         android:id="@+id/textView3"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
-   <!-- <ListView
-        android:id="@+id/carddeck_list"
-        android:layout_width="match_parent"
-        android:textColor="#fefefe"
-        android:layout_marginTop="30dp"
-        android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:layout_toRightOf="@id/textView3"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="18dp" />
--->
+
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="fill_parent"
@@ -42,6 +31,18 @@
         android:layout_marginLeft="8dip"
         android:layout_marginRight="8dip"
         android:layout_below="@+id/textView3"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="@string/play"
+        android:layout_gravity="center"
+        android:layout_width="190dp"
+        android:layout_height="70dp"
+        android:elevation="0dp"
+        android:background="@drawable/main_button"
+        android:id="@+id/button5"
+        android:layout_marginBottom="138dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
 
