--- a/app/src/main/res/layout/activity_choosedeck.xml
+++ b/app/src/main/res/layout/activity_choosedeck.xml
@@ -26,6 +26,7 @@
         android:id="@+id/spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:prompt="@string/choose"
         android:background="#fefefe"
         android:layout_marginTop="11dp"
         android:layout_marginLeft="8dip"
